# cpp-make-none-app

./: CMakeLists.txt  Dockerfile  Makefile  dependencies.mk
deploy-templates/: values.yaml
include/: HttpServer.h
lib/: libmicrohttpd.12.dylib  libmicrohttpd.la
lib/pkgconfig/: libmicrohttpd.pc
src/: HttpServer.cpp  main.cpp
tests/: test_main.c  test_main.cpp
